--- a/minigame/1.html
+++ b/minigame/1.html
@@ -195,6 +195,12 @@
         </div>
     </main>
 
+    <footer class="bg-gray-50 border-t mt-12 py-6">
+        <div class="container mx-auto px-4 text-center text-gray-500">
+            <p>部分资源来自网络</p>
+        </div>
+    </footer>
+
     <script>
         // 24节气数据（使用王者荣耀的图片）
         const solarTerms = {
