--- a/minigame/4/index.html
+++ b/minigame/4/index.html
@@ -178,18 +178,7 @@
 
         <!-- 页脚 -->
         <footer class="mt-12 text-center text-gray-500 text-sm">
-            <p>了解更多关于中国传统24节气的知识，感受中华文化的博大精深</p>
-            <div class="mt-4 flex justify-center space-x-4">
-                <a href="#" class="text-gray-400 hover:text-primary transition-colors">
-                    <i class="fa-brands fa-weixin text-xl"></i>
-                </a>
-                <a href="#" class="text-gray-400 hover:text-primary transition-colors">
-                    <i class="fa-brands fa-weibo text-xl"></i>
-                </a>
-                <a href="#" class="text-gray-400 hover:text-primary transition-colors">
-                    <i class="fa-brands fa-github text-xl"></i>
-                </a>
-            </div>
+            <p>部分资源来自网络</p>
         </footer>
     </div>
 
