--- a/minigame/index.html
+++ b/minigame/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>24节气小游戏索引</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <button onclick="window.open('1')" type="button" class="px-10 py-3 bg-sky-500 rounded-full text-white hover:bg-sky-600 active:bg-sky-700">王者荣耀</button>
